--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,13 +1,5 @@
 @import './variables';
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -27,6 +19,26 @@ html {
 
   @media only screen and (max-width: $bp-largest) {
       font-size: 50%;
+  }
+}
+
+body {
+  font-weight: 300;
+  line-height: 1.6;
+  font-family: $font-primary;
+
+  &::-webkit-scrollbar {
+      width: 15px;
+  }
+
+  &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      background-color: rgba($color-primary-light, .3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+      background-color: rgba($color-primary-dark, .5);
+      //outline: 1px solid $color-primary-light;
   }
 }
 
