Added projects section and other details

--- a/components/home/interests/Interests.module.scss
+++ b/components/home/interests/Interests.module.scss
@@ -12,7 +12,7 @@
 
     padding: 5rem;
     margin: 10rem 0;
-    grid-gap: 6rem;
+    gap: 6rem;
 
     & .heading-2 {
         grid-column: 1 / -1;
