--- a/components/home/navbar/Navbar.module.scss
+++ b/components/home/navbar/Navbar.module.scss
@@ -3,7 +3,7 @@
 .navbar {
     height: 10vh;
     position: fixed;
-    background-color: #fff;
+    background-color: white;
     border-bottom: 2px solid $color-primary;
     width: 100vw;
     z-index: 9999;
