--- a/components/home/projects/Projects.module.scss
+++ b/components/home/projects/Projects.module.scss
@@ -8,7 +8,8 @@
     padding: 5rem;
     gap: 3rem;
 
-    & h2 {
+    & h2,
+    & h3 {
         grid-column: 1 / -1;
     }
 }
@@ -22,14 +23,7 @@
     align-items: flex-end;
     border-radius: 30px;
     box-shadow: 0px 15px 15px 5px rgba(0, 0, 0, 0.5);
-
-    background-image: linear-gradient(
-        to bottom,
-        rgba(145, 107, 191, 0.5),
-        rgba(28, 12, 91, 0.9)
-    ), url('/logos/dark_logo_transparent_background.png');
     background-position: center;
-    background-size: 50%;
     transition: all 0.5s;
 
     & h3 {
